--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           </select>
           <input id="searchBox" type="text" class="form-control form-control-sm" style="max-width:250px" placeholder="Search...">
         </div>
-        <div class="table-responsive" style="max-height:520px;overflow:auto">
+        <div class="table-responsive" style="max-height:75vh;overflow:auto">
           <table class="table table-sm table-hover mb-0" style="table-layout:fixed; width:100%" id="DetailsbrandTable">
             <colgroup>
               <col style="width:15%">
